--- a/blog-platform/pom.xml
+++ b/blog-platform/pom.xml
@@ -77,7 +77,13 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
 	</dependencies>
+
 
 
 	<build>
