--- a/blog-platform/src/main/resources/application.properties
+++ b/blog-platform/src/main/resources/application.properties
@@ -1,13 +1,23 @@
 spring.application.name=Blog Platform
-spring.datasource.url=jdbc:mysql://localhost:3306/blog_platform
-spring.datasource.username=root
-spring.datasource.password=your password
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.thymeleaf.enabled=true
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.mode=HTML
-//spring.thymeleaf.cache=false
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jdbc:mysql://localhost:3306/340-test?useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/340-test
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/blog_platform
+#spring.datasource.username=root
+#spring.datasource.password=your password
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+##spring.thymeleaf.enabled=true
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
+#spring.thymeleaf.mode=HTML
+#spring.thymeleaf.cache=false
+#logging.level.org.springframework.web=DEBUG
 
