--- a/blog-platform/src/main/resources/application.properties
+++ b/blog-platform/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/blog_platform
+#spring.datasource.url=jdbc:mysql://localhost:3306/blog_platform?useSSL=false
 #spring.datasource.username=root
 #spring.datasource.password=your password
 #spring.jpa.hibernate.ddl-auto=update
