--- a/blog-platform/src/main/resources/application.properties
+++ b/blog-platform/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=Blog Platform
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:mysql://localhost:3306/340-test?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/blog_platform?useSSL=false
 #spring.datasource.url=jdbc:mysql://localhost:3306/340-test
 spring.datasource.username=root
-spring.datasource.password=admin
+#spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 
 
