--- a/blog-platform/src/main/resources/application.properties
+++ b/blog-platform/src/main/resources/application.properties
@@ -22,3 +22,12 @@ spring.jpa.hibernate.ddl-auto=update
 #logging.level.org.springframework.web=DEBUG
 
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=your-email@gmail.com
+spring.mail.password=your-app-password
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.debug=true
+
